oci/tenancy/regulus/us_ashburn_1/applications/k3s/argocd/manifests/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.vinny.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
  tls:
    - hosts:
        - whoami.vinny.dev.br
      secretName: whoami-tls
